--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="news.html">News</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="Photos.html">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -140,3 +140,4 @@
     </footer>
 </body>
 </html>
+
