--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="Photos.html">Photos</a></li>
+                <img src="photos/photo1.jpg" alt="Photo 1">
+
             </ul>
         </nav>
     </header>
@@ -140,4 +142,5 @@
     </footer>
 </body>
 </html>
+
 
