--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="Photos.html">Photos</a></li>
-                <img src="photos/photo1.jpg" alt="Photo 1">
 
             </ul>
         </nav>
@@ -68,7 +67,7 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="photos.html">Photos</a></li>
+            <li><a href="Photos.html">Photos</a></li>
         </ul>
     </aside>
 
@@ -142,5 +141,6 @@
     </footer>
 </body>
 </html>
+
 
 
