--- a/Photos.html
+++ b/Photos.html
@@ -15,7 +15,7 @@
 
         <section id="Photos">
             <div class="gallery">
-                <img src="C:\Users\Mpumi\Downloads\pexels-pixabay-260922.jpg" alt="Community Event 1" width="300" height="200">
+                <img src="https://github.com/MpenduloN/plp-webtechnologies-classroom-july2025-july-2025-final-project-and-deployment-Final-Project-and-Depl/blob/main/pexels-andreas-neubauer-734874-6415077.jpg" alt="Community Event 1" width="300" height="200">
                 <img src="C:\Users\Mpumi\Downloads\pexels-peng-liu-45946-169647.jpg" alt="Community Event 2" width="300" height="200">
                 <img src= "C:\Users\Mpumi\Downloads\pexels-pixabay-264636.jpg"alt="Community Event 3" width="300" height="200">
                 <img src="C:\Users\Mpumi\Downloads\pexels-shattha-pilabut-38930-135620.jpg" alt="Community Event 4" width="300" height="200">
@@ -38,4 +38,5 @@
             <p>&copy; 2025 Community Connect. All rights reserved.</p>
         </footer>
     </body>
+
 </html>
