--- a/Photos.html
+++ b/Photos.html
@@ -15,22 +15,22 @@
 
         <section id="Photos">
             <div class="gallery">
-                <img src="https://github.com/MpenduloN/plp-webtechnologies-classroom-july2025-july-2025-final-project-and-deployment-Final-Project-and-Depl/blob/main/pexels-andreas-neubauer-734874-6415077.jpg" alt="Community Event 1" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-peng-liu-45946-169647.jpg" alt="Community Event 2" width="300" height="200">
-                <img src= "C:\Users\Mpumi\Downloads\pexels-pixabay-264636.jpg"alt="Community Event 3" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-shattha-pilabut-38930-135620.jpg" alt="Community Event 4" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-pixabay-236940.jpg" alt="Community Event 5" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-pixabay-158028.jpg" alt="Community Event 6" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-leo-1305435-2500153.jpg" alt="Community Event 7" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-jonathanborba-2878742.jpg" alt="Community Event 8" width="300" height="200">
-                <img src= "C:\Users\Mpumi\Downloads\pexels-wendywei-1190297.jpg"alt="Community Event 9" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-daiangan-102127.jpg" alt="Community Event 10" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-mikez-12312.jpg" alt="Community Event 11" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-pixabay-219692.jpg" alt="Community Event 12" width="300" height="200">
-                <img src= "C:\Users\Mpumi\Downloads\pexels-peng-liu-45946-169677.jpg" alt="Community Event 13" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-pixabay-290595.jpg" alt="Community Event 14" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-maximilian-orlowsky-515733-33538828.jpg" alt="Community Event 15" width="300" height="200">
-                <img src="C:\Users\Mpumi\Downloads\pexels-skyriusmarketing-2129796.jpg" alt="Community Event 16" width="300" height="200">
+                <img src="news/pexelsandreas-neubauer-734874-6415077.jpg" alt="Community Event 1" width="300" height="200">
+                <img src="pexels-daiangan-102127.jpg" alt="Community Event 2" width="300" height="200">
+                <img src= "pexels-jonathanborba-2878742.jpg"alt="Community Event 3" width="300" height="200">
+                <img src="pexels-leo-1305435-2500153.jpg" alt="Community Event 4" width="300" height="200">
+                <img src="pexels-mokez-12312.jpg" alt="Community Event 5" width="300" height="200">
+                <img src="pexels-peng-lu-45946-169647.jpg" alt="Community Event 6" width="300" height="200">
+                <img src="pexels-pixabay-158028.jpg" alt="Community Event 7" width="300" height="200">
+                <img src="pexels-pixabay-219692jpg" alt="Community Event 8" width="300" height="200">
+                <img src= "pexels-pixabay-23940.jpg"alt="Community Event 9" width="300" height="200">
+                <img src="pexels-maximillian-orlowsky-515733-33538828.jpg" alt="Community Event 10" width="300" height="200">
+                <img src="pexels-mikez-12312.jpg" alt="Community Event 11" width="300" height="200">
+                <img src="pexels-pixabay-219692.jpg" alt="Community Event 12" width="300" height="200">
+                <img src= "pexels-peng-liu-45946-169677.jpg" alt="Community Event 13" width="300" height="200">
+                <img src="pexels-pixabay-290595.jpg" alt="Community Event 14" width="300" height="200">
+                <img src="pexels-maximilian-orlowsky-515733-33538828.jpg" alt="Community Event 15" width="300" height="200">
+                <img src="pexels-skyriusmarketing-2129796.jpg" alt="Community Event 16" width="300" height="200">
             </div>
         </section>
 
@@ -40,3 +40,4 @@
     </body>
 
 </html>
+
