--- a/Photos.html
+++ b/Photos.html
@@ -15,12 +15,12 @@
 
         <section id="Photos">
             <div class="gallery">
-                <img src="pexelsandreas-neubauer-734874-6415077.jpg" alt="Community Event 1" width="300" height="200">
+                <img src="pexels-skyriusmarketing-2129796.jpg" alt="Community Event 1" width="300" height="200">
                 <img src="pexels-daiangan-102127.jpg" alt="Community Event 2" width="300" height="200">
-                <img src= "pexels-jonathanborba-2878742.jpg"alt="Community Event 3" width="300" height="200">
-                <img src="pexels-leo-1305435-2500153.jpg" alt="Community Event 4" width="300" height="200">
+                <img src= "pexels-wendywei-1190297.jpg"alt="Community Event 3" width="300" height="200">
+                <img src="pexels-pixabay-264636.jpg" alt="Community Event 4" width="300" height="200">
                 <img src="pexels-mokez-12312.jpg" alt="Community Event 5" width="300" height="200">
-                <img src="pexels-peng-lu-45946-169647.jpg" alt="Community Event 6" width="300" height="200">
+                <img src="pexels-peng-liu-45946-169677.jpg" alt="Community Event 6" width="300" height="200">
                 <img src="pexels-pixabay-158028.jpg" alt="Community Event 7" width="300" height="200">
                 <img src="pexels-pixabay-219692jpg" alt="Community Event 8" width="300" height="200">
                 <img src= "pexels-pixabay-236940.jpg"alt="Community Event 9" width="300" height="200">
@@ -40,5 +40,6 @@
     </body>
 
 </html>
+
 
 
