--- a/Photos.html
+++ b/Photos.html
@@ -17,7 +17,7 @@
             <div class="gallery">
                 <img src="pexels-daiangan-102127.jpg" alt="Community Event 2" width="300" height="200">
                 <img src= "pexels-wendywei-1190297.jpg"alt="Community Event 3" width="300" height="200">
-                <img src="pexels-mokez-12312.jpg" alt="Community Event 5" width="300" height="200">
+                <img src="pexels-mikez-12312.jpg" alt="Community Event 5" width="300" height="200">
                 <img src="pexels-pixabay-158028.jpg" alt="Community Event 7" width="300" height="200">
                 <img src= "pexels-pixabay-236940.jpg"alt="Community Event 9" width="300" height="200">
                 <img src="pexels-mikez-12312.jpg" alt="Community Event 11" width="300" height="200">
@@ -35,6 +35,7 @@
     </body>
 
 </html>
+
 
 
 
